Fix loading bug and add overflow - service

--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -4,7 +4,7 @@
     padding-right: 140px;
     padding-left: 140px;
     margin: auto;
-    height: auto;
+    height: 1000px;
 }
 
 .custom-heading{
